# server.js
@@ -8,8 +8,7 @@ const bodyParser = require('body-parser');
 const connectDB = require('./src/config/database');
 const serverLog = require("./src/middleware/serverLog");
 const swagger_router = require('./src/api/swagger-ui/router');
-const signup_router = require("./src/api/users/auth/signup/router");
-
+const auth_router = require("./src/api/users/auth/router");
 
 //  middleware
 app.use(cors());
@@ -19,10 +18,9 @@ app.use(bodyParser.urlencoded({ extended: false }));
 //custom middleware
 app.use(serverLog);
 
-
 // Routers
 app.use(swagger_router);
-app.use(signup_router);
+app.use(auth_router);
 
 
 
